--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>複数行入力フォーム</title>
+<title>一気に検索</title>
 <style>
     textarea {
         width: 300px;
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<h2>複数行入力フォーム</h2>
+<h2>一気に検索</h2>
 
 <textarea id="inputText" placeholder="ここに複数行のテキストを入力してください"></textarea>
 <button id="executeButton">実行</button>
